# FoilBoXX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  toDo.txt
.github/workflows/: build.yml
UI/: airfoil.ui  airfoilDock.ui  airfoilWidget.ui  analysisPointWidget.ui  coordsModeWidget.ui  dock.ui  foilWidget.ui  foilWindow.ui  foilWindowOld.ui  foilWindowOld2.ui  main.ui  menu.ui  menuWidget.ui  menuWidget.ui.bak  menuWidget.ui.bak2  modeWidget.ui  newFoil.ui  polarGoalWidget.ui  polarPlotWidget.ui  polarWidget.ui  polarWindow.ui  pressure.ui  pressureOld.ui  settings.ui  shapeWidget.ui
debug/: CMakeCache.txt  Makefile  SplineFunctionsTest  cmake_install.cmake  compile_commands.json
debug/.clangd/index/: arma_rng_cxx11.hpp.D4BADDF99C655CE7.idx  compiler_setup.hpp.2C5351CA264BAFD5.idx  config.hpp.42CBC40079EBA71A.idx  def_arpack.hpp.B209A7969E0E82ED.idx  def_blas.hpp.BBA294BC31E7D1D9.idx  def_lapack.hpp.59607EE35871E37C.idx  def_superlu.hpp.541890A0B0BD14D2.idx  include_atlas.hpp.92E5E99E3681794A.idx  include_superlu.hpp.DAC41F0810D33EB2.idx  typedef_elem.hpp.A555B7A95649BCC0.idx  ui_airfoilWidget.h.C2CD3520A55A2007.idx  ui_analysisPointWidget.h.4DC7571318D91062.idx  ui_coordsModeWidget.h.5F257C9D07392CAF.idx  ui_dock.h.8AEE7C657CA5DC33.idx  ui_modeWidget.h.30C43D997852F210.idx  ui_polarWidget.h.B240CFF4804273E8.idx  ui_shapeWidget.h.45BB2BB9000CA869.idx
debug/FoilBoXX_autogen/: moc_predefs.h  mocs_compilation.cpp
debug/FoilBoXX_autogen/3YJK5W5UP7/: qrc_resources.cpp
debug/FoilBoXX_autogen/UVLADIE3JM/: moc_AirfoilInterface.cpp  moc_AirfoilInterface.cpp.d  moc_Analysis.cpp  moc_Analysis.cpp.d  moc_AnalysisPoint.cpp  moc_AnalysisPoint.cpp.d  moc_BernsteinShapeInterface.cpp  moc_BernsteinShapeInterface.cpp.d  moc_FoilMode.cpp  moc_FoilMode.cpp.d  moc_FoilPlot.cpp  moc_FoilPlot.cpp.d  moc_HierarchyElement.cpp  moc_HierarchyElement.cpp.d  moc_Interface.cpp  moc_Interface.cpp.d  moc_ModePlot.cpp  moc_ModePlot.cpp.d  moc_Polar.cpp  moc_Polar.cpp.d
debug/FoilBoXX_autogen/WWBIFOKH4J/: moc_Dock.cpp  moc_Dock.cpp.d  moc_FoilPlotWidget.cpp  moc_FoilPlotWidget.cpp.d  moc_PolarPlotWidget.cpp  moc_PolarPlotWidget.cpp.d  moc_PressurePlotWidget.cpp  moc_PressurePlotWidget.cpp.d
debug/FoilBoXX_autogen/include/: ui_airfoilWidget.h  ui_analysisPointWidget.h  ui_coordsModeWidget.h  ui_dock.h  ui_modeWidget.h  ui_polarWidget.h  ui_shapeWidget.h
debug/src/: Makefile  cmake_install.cmake
debug/src/Airfoil/: Makefile  cmake_install.cmake
debug/src/Airfoil/Airfoil_autogen/: moc_predefs.h
debug/src/QwtCustomPlot/: Makefile  cmake_install.cmake
debug/src/SplineFunctions/: Makefile  cmake_install.cmake
debug/src/XfoilSession/: Makefile  cmake_install.cmake
resources/: Scratch.af  Start.af  reference.af  resources.qrc
src/: AirfoilInterface.cpp  AirfoilInterface.h  Analysis.cpp  Analysis.h  AnalysisPoint.cpp  AnalysisPoint.h  BernsteinShapeInterface.cpp  BernsteinShapeInterface.h  CMakeLists.txt  DraggableCurve.cpp  DraggableCurve.h  FoilMode.cpp  FoilMode.h  FoilPlot.cpp  FoilPlot.h  HierarchyElement.cpp  HierarchyElement.h  Interface.cpp  Interface.h  ModePlot.cpp  ModePlot.h  Optimization.cpp  Optimization.h  Polar.cpp  Polar.h  PolarGoal.cpp  PolarGoal.h  TreeFunctions.cpp  TreeFunctions.h  main.cpp
src/Airfoil/: CMakeLists.txt
src/Airfoil/include/: Airfoil.h
src/Airfoil/src/: Airfoil.cpp  AirfoilPlot.cpp  AirfoilPlot.h  BernsteinShape.cpp  BernsteinShape.h  NoseBezier.cpp  NoseBezier.h  ShapeFunction.cpp  ShapeFunction.h
src/Airfoil/test/: CMakeLists.txt  test.cpp
src/QwtCustomPlot/: CMakeLists.txt
src/QwtCustomPlot/include/: QwtCustomPlot.h
src/QwtCustomPlot/src/: QwtCustomPlot.cpp
src/SplineFunctions/: CMakeLists.txt
src/SplineFunctions/include/: SplineFunctions.h
src/SplineFunctions/src/: SplineFunctions.cpp
src/SplineFunctions/test/: CMakeLists.txt  test.cpp
src/Windows/: Dock.cpp  Dock.h  FoilPlotWidget.cpp  FoilPlotWidget.h  PolarPlotWidget.cpp  PolarPlotWidget.h  PressurePlotWidget.cpp  PressurePlotWidget.h
src/XfoilSession/: CMakeLists.txt
src/XfoilSession/include/: XfoilSession.h
src/XfoilSession/src/: XfoilSession.cpp
(+9 files in other folders)
